--- a/lide/tereza-etheri.html
+++ b/lide/tereza-etheri.html
@@ -53,26 +53,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-101ff965.js">
+		<link rel="modulepreload" href="../_app/immutable/start-260f2407.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-03b48ebc.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-87b3e3e2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-cc3daf12.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-9106fe42.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-ddf5f9e2.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-b34008bd.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-113c8608.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-70e19c88.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-76f4ef0b.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-cceef076.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-bbe7d5be.js"><title>Tereza | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-aec2c28d.js"><title>Tereza | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -129,7 +129,8 @@
 </div>
       <div class="mt-4 sm:mt-0"><div class="mb-4 text-md uppercase">Přednášející</div>
         <h1 class="text-2xl font-bold">Tereza 🇨🇿</h1>
-        
+        <div class="mt-1"><span class="text-xs">aka</span>
+            <span class="font-bold">eTheri</span></div>
         <div class="mt-4 text-custom-darkpurple italic"><p>Content creator and social media manager, NFT nadšenec</p></div>
         <div class="mt-4 text-custom-darkpurple links"><p><a href="https://futureland.io/" class="underline hover:no-underline" target="_blank">Futureland</a></p></div>
         <div class="mt-4">Sekce: Základy, DAOs, NFTs/Metaverse</div>
@@ -160,14 +161,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1vzn2v3">
-			import { start } from "../_app/immutable/start-101ff965.js";
+		<script type="module" data-sveltekit-hydrate="2lixeo">
+			import { start } from "../_app/immutable/start-260f2407.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1vzn2v3"]').parentNode,
-				version: "1683235642178",
+				target: document.querySelector('[data-sveltekit-hydrate="2lixeo"]').parentNode,
+				version: "1683235773217",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
