--- a/src/app.html
+++ b/src/app.html
@@ -50,6 +50,17 @@
       }
     }
     </script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DDCP0QYR9M"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-DDCP0QYR9M');
+    </script>
+
     %sveltekit.head%
 	</head>
   <body data-sveltekit-preload-data="hover">
